# alicebot-example

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  main.py  pyproject.toml
data/: reply_data.json
plugins/alicebot-plugin-dice/: __init__.py  config.py
plugins/alicebot_plugin_base/: __init__.py  config.py
plugins/alicebot_plugin_dice/: __init__.py  config.py
plugins/alicebot_plugin_echo/: __init__.py  config.py
plugins/alicebot_plugin_luck/: __init__.py  config.py
plugins/alicebot_plugin_public/: __init__.py  config.py
plugins/alicebot_plugin_repeater/: __init__.py  config.py
plugins/alicebot_plugin_reply/: __init__.py  config.py
plugins/alicebot_plugin_send/: __init__.py  config.py
