[tool.poetry]
name = "alicebot-example"
version = "0.1.0"
description = "AliceBot Example Bot"
license = "MIT"
authors = ["st1020 <stone_1020@qq.com>"]
readme = "README.md"
repository = "https://github.com/st1020/alicebot-example"

[tool.poetry.dependencies]
python = "^3.8"
alicebot = "^0.3.0"
alicebot-adapter-cqhttp = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.0"
pre-commit = "^2.19.0"
pre-commit-hooks = "^4.2.0"

[tool.pydantic-pycharm-plugin]
ignore-init-method-arguments = true

[tool.black]
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["alicebot", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
