[project]
name = "alicebot-example"
version = "0.1.0"
description = "AliceBot Example Bot"
authors = [{ name = "st1020", email = "stone_1020@qq.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["alicebot[all]>=0.10.0"]

[tool.uv]
dev-dependencies = ["ruff"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "COM",    # flake8-commas
    "EM",     # flake8-errmsg
    "INP",    # flake8-no-pep420
    "E501",   # Line too long, handled by black
    "S101",   # Use of assert detected
    "S311",   # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TRY003", # Avoid specifying long messages outside the exception class
]
allowed-confusables = ["，", "：", "！"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportCallInDefaultInitializer = true
reportImportCycles = true
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
